syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "DesafioPix";

package br.com.zup;

service DesafioPixService {
  rpc send (DesafioPixRequest) returns (DesafioPixReply) {}

  rpc criaChavePix(NovaChavePixRequest) returns (NovaChavePixResponse){}
}

message DesafioPixRequest {
  string name = 1;
}

message DesafioPixReply {
  string message = 1;
}

message NovaChavePixRequest{

  enum TipoChave{
    CPF = 0;
    celular = 1;
    email = 2;
    chaveAleatoria = 3;

  }

  enum TipoConta{
    contaCorrente = 0;
    contaPoupanca = 1;
  }

  string identificadorItau = 1;
  TipoChave tipoChave = 2;
  string valorChave = 3;
  TipoConta tipoConta = 4;

}

message NovaChavePixResponse{
  string pixId = 1;
}